--- a/order.html
+++ b/order.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="impressum_navbar.css">
     <link rel="stylesheet" href="styleorder.css">
+    <script src="scripts/order.js"></script>
     <title>Bestellen</title>
 </head>
 <body>
