--- a/order.html
+++ b/order.html
@@ -83,7 +83,7 @@
                 </div>
 
                 <div class="right">
-                    <table class="text">
+                    <table id="tableorder" class="text">
                         <tr>
                            <th>Anzahl</th>
                            <th>Produkt</th>
