comment for Error empty field

--- a/order.html
+++ b/order.html
@@ -54,7 +54,7 @@
                     <div class="ordersummary" id="selectedValue">
 
                         <label class="text" for="select">Auswahl:</label>
-                        <input type="number" id="amount" placeholder="Anzahl">
+                        <input type="number" id="amount" placeholder="Anzahl"> <!--darf nicht leer sein. Noch hinzufügen-->
                         <select name="Skulptur" id="select">
                             <option value="cat-elegant">cat-elegant</option>
                             <option value="cat-detailed">cat-detailed</option>
