--- a/products.html
+++ b/products.html
@@ -75,7 +75,9 @@
                 Sie waren lange ein Symbol für Unglück und Misere. <br>
                 Dieser Irrglaube hat sich im Mittelalter etabliert und hat teilweise noch heute Bestand.<br>
                 <br>
-                Skulptur: cat-elegant</p>
+                Skulptur: cat-elegant <br>
+                Preis: 40€
+                </p>
             </div>
         </div>
     </div>
@@ -90,7 +92,9 @@
                 <p class="alone">Nicht bei uns... Schwarze Katzen stehen hier für Eleganz, Mut und Glück. <br>
                 Selbst die alten Japaner haben schwarze Katzen als Glücksbringer angesehen und so auch wir. <br>
                 <br>
-                Skulptur: cat-detailed</p>
+                Skulptur: cat-detailed<br>
+                Preis: 55€
+                </p>
             </div>
         </div>
     </div>
@@ -102,7 +106,8 @@
 
         <div class="box_right">
             <div class="text">
-                <p class="alone">Skulptur: cat-cute</p>
+                <p class="alone">Skulptur: cat-cute<br>
+                    Preis: 35€</p>
             </div>
         </div>
     </div>
@@ -122,7 +127,8 @@
                 <p>Wusstest du schon, dass Grabsteine für viel mehr stehen als nur für den Tod eines Verstorbenen? <br>
                     Ein Grabstein drückt vielmehr die Persönlichkeit einer Person und ihre Interessen oder ihren Glauben aus. <br>
                     <br>
-                    Skulptur: cross</p>
+                    Skulptur: cross<br>
+                    Preis: 40€</p>
             </div>
         </div>
     </div>
@@ -136,7 +142,8 @@
             <div class="text">
                 <p class="alone">Dabei kommen verschiedene Symbole zum Einsatz, die einen einfachen Stein in ein individuelles Kunstwerk verwandeln, um verlorene Personen für die Ewigkeit festzuhalten. <br>
                     <br>
-                    Skulptur: gravestone</p>
+                    Skulptur: gravestone<br>
+                    Preis: 35€</p>
             </div>
         </div>
     </div>
@@ -151,7 +158,8 @@
                 <p class="alone">Bei einem Sarg ist die Sache nicht anders. Ihre Geschichte beginnt hier bereits im damaligen Ägypten und haben somit viele Epochen der Menschheit überdauert. 
                     Der Zweck war jedoch immer gleich: die angemessene Bestattung der Verstorbenen. Um ihnen die letzte Ruhe so angenehm wie möglich zu gestalten, werden die Särge auf die jeweilige Person angepasst. <br>
                     <br>
-                    Skulptur: coffin-normal
+                    Skulptur: coffin-normal<br>
+                    Preis: 40€
                 </p>
             </div>
         </div>
@@ -166,7 +174,8 @@
             <div class="text">
                 <p class="alone">Auch wir legen großen Wert darauf unsere Schokoladensärge zur äußersten Zufriedenheit unserer Kunden herzustellen. Mit Liebe zum Detail wird jedes Teil einzeln und händisch verziert. <br>
                     <br>
-                    Skulptur: gravestone-gold
+                    Skulptur: gravestone-gold<br>
+                    Preis: 50€
                 </p>
             </div>
         </div>
@@ -181,7 +190,8 @@
             <div class="text">
                 <p class="alone">Wir haben eine standardmäßige Auswahl an Grabsteinen und Särgen, wir fertigen auf Wunsch auch ihre individuelle Skulptur an. <br>
                     <br>
-                    Skulptur: gravestone-white
+                    Skulptur: gravestone-white<br>
+                    Preis: 55€
                 </p>
             </div>
         </div>
@@ -197,7 +207,8 @@
                 <p class="alone">Heilige Kreaturen oder Boten des Todes? Der Ruf der Raben ist sehr gespalten. So galten sie in der Antike als Glücksbringer, während sie im Mittelalter als unheilvolle Geschöpfe verachtet wurden. Ob man sie mag oder nicht,
                     eins ist sicher: sie sind mystisch und schwarz und ergänzen unser Friedhof Thema perfekt. <br>
                     <br>
-                    Skulptur: raven
+                    Skulptur: raven<br>
+                    Preis: 45€
                 </p>
             </div>
         </div>
@@ -219,7 +230,8 @@
                  Aber kennst du auch ihre verschiedenen Bedeutungen? 
                 <br>
                 <br>
-                Skulptur: blackwhite-dragon</p>
+                Skulptur: blackwhite-dragon<br>
+                Preis: 60€</p>
             </div>
         </div>
     </div>
@@ -235,7 +247,8 @@
                 <p class="alone">Im asiatischen Raum werden sie meist mit der Natur, besonders dem Wasser in Verbindung gebracht. 
                     In China stehen sie für Macht, Wohlstand und Glück… In Japan wiederum für Stärke, Schutz und Weisheit. <br>
                 <br>
-                Skulptur: dragon-detailed</p>
+                Skulptur: dragon-detailed<br>
+                Preis: 75€</p>
             </div>
         </div>
     </div>
@@ -250,7 +263,8 @@
                 <p class="alone">Im Gegensatz zum positiven Bild des Drachens, sind sie in Europa ein Symbol des Bösen und der Zerstörung. 
                     Sie werden als Gegner von Helden in Mythen betrachtet, können allerdings auch für Herausforderungen stehen. <br>
                     <br>
-                    Skulptur: dragon-brown</p>
+                    Skulptur: dragon-brown<br>
+                    Preis: 50€</p>
             </div>
         </div>
     </div>
@@ -264,7 +278,8 @@
             <div class="text">
                 <p class="alone">So vielfältig die Bedeutung dieser Wesen sein kann, sind es auch unsere Skulpturen. <br>
                 <br>
-                Skulptur: dragon-cake</p>
+                Skulptur: dragon-cake<br>
+                Preis: 50€</p>
             </div>
         </div>
     </div>
@@ -282,7 +297,8 @@
         <div class="text">
             <p>Im Vordergrund stehen bei uns natürlich die schwarzen Rosen. Damals zu Trauerfeiern und Beerdigungen symbolisierten sie Tod, Verlust und Vergänglichkeit. <br>
             <br> 
-            Skulptur: rose-black</p>
+            Skulptur: rose-black<br>
+            Preis: 45€</p>
         </div>
     </div>
 </div>
@@ -297,7 +313,8 @@
         <div class="text">
             <p class="alone">Heutzutage haben schwarze Rosen nicht nur negative Bedeutungen, sondern auch Positive. Zum Beispiel werden sie auch als Zeichen eines Neuanfangs gesehen nach einer Trennung. <br>
                 <br>
-                Skulptur: rose-brown
+                Skulptur: rose-brown<br>
+                Preis: 55€
 </p>
         </div>
     </div>
@@ -312,7 +329,8 @@
         <div class="text">
             <p class="alone">Passend zu ihrer mysteriösen Ausstrahlung haben wir sie natürlich in unserer Produktpalette aufgenommen. <br>
             <br>
-            Skulptur: rose-blackwhite</p>
+            Skulptur: rose-blackwhite<br>
+            Preis: 50€</p>
         </div>
     </div>
 </div>
@@ -331,7 +349,8 @@
             <p>Gargoyles, auch Wasserspeier genannt, hatten in der gotischen Architektur die Aufgabe des Schutzes der Gebäude. So haben sie Wasser von den Dächern durch ihren Mund abgeleitet. 
                 Ebenso gelten sie auch in der Mythologie als Schutzsymbole. Es wird ihnen nachgesagt, durch ihr Erscheinungsbild, böse Geister und Dämonen fernzuhalten. <br>
                 <br>
-                Skulptur: gargoyle-head </p>
+                Skulptur: gargoyle-head<br>
+                Preis: 40€ </p>
         </div>
     </div>
 </div>
@@ -347,7 +366,8 @@
             <p class="alone">Auf künstlerischer Ebene spiegeln sie die Fantasie des jeweiligen Künstlers wider, der sie erschaffen hat. <br>
                 Oftmals werden Fantasie - und Mischwesen dargestellt, die so nicht existieren. So sind der Kreativität keine Grenzen gesetzt. <br>
                 <br>
-                Skulptur: gargoyle-wings</p>
+                Skulptur: gargoyle-wings<br>
+                Preis: 55€</p>
         </div>
     </div>
 </div>
@@ -361,7 +381,8 @@
         <div class="text">
             <p class="alone">Als große Fans der gotischen Architektur stellen auch wir kunstvolle Gargoyle Skulpturen her, nur sind sie auch genauso lecker wie ansehnlich.<br>
                 <br>
-                Skulptur: gargoyle 
+                Skulptur: gargoyle <br>
+                Preis: 45€
             </p>
         </div>
     </div>
