--- a/order.html
+++ b/order.html
@@ -54,8 +54,7 @@
                     <div class="ordersummary" id="selectedValue">
 
                         <label class="text" for="select">Auswahl:</label>
-                        <input type="number" id="amount" min="0" placeholder="Anzahl"> <!--darf nicht leer sein. Noch hinzufügen-->
-                        <span id="error-message" style="color:red; display: none;">Dieses Feld darf nicht leer sein.</span>
+                        <input type="number" id="amount" min="0" placeholder="Anzahl"> 
                         <select name="Skulptur" id="select">
                             <option value="cat-elegant">cat-elegant</option>
                             <option value="cat-detailed">cat-detailed</option>
@@ -80,6 +79,7 @@
                         </select> 
             
                         <button type="button" onclick="addOrder()">Hinzufügen</button> 
+                        <span id="error-message" style="color:red; display: none;">Bitte Zahl eingeben</span>
                     </div>
                 </div>
 
@@ -88,7 +88,8 @@
                         <tr>
                            <th>Anzahl</th>
                            <th>Produkt</th>
-                           <th>Preis</th>
+                           <th>Preis pro Stück</th>
+                           <th>Gesamt</th>
                         </tr>
                     </table> 
                 </div>
