--- a/order.html
+++ b/order.html
@@ -54,7 +54,7 @@
                     <div class="ordersummary" id="selectedValue">
 
                         <label class="text" for="select">Auswahl:</label>
-                        <input type="int" id="amount" min="0" placeholder="Anzahl"> 
+                        <input class ="amount" type="int" id="amount" min="0" placeholder="Anzahl"> 
                         <select name="Skulptur" id="select">
                             <option value="cat-elegant">cat-elegant</option>
                             <option value="cat-detailed">cat-detailed</option>
@@ -80,6 +80,7 @@
             
                         <button type="button" onclick="addOrder()">Hinzufügen</button> 
                         <span id="error-message" style="color:red; display: none;">Bitte Zahl zwischen 1 und 10 eingeben</span>
+                        <span id="error-message2" style="color:red; display: none;">sdfgsetrtg</span>
                     </div>
                 </div>
 
