--- a/order.html
+++ b/order.html
@@ -80,7 +80,7 @@
             
                         <button type="button" onclick="addOrder()">Hinzufügen</button> 
                         <span id="error-message" style="color:red; display: none;">Bitte Zahl zwischen 1 und 10 eingeben</span>
-                        <span id="error-message2" style="color:red; display: none;">sdfgsetrtg</span>
+                        <span id="error-message2" style="color:red; display: none;">Kommazahlen sind nicht erlaubt</span>
                     </div>
                 </div>
 
@@ -94,11 +94,9 @@
                         </tr>
                     </table> 
                     <div id="total" class="text">0 €</div>
+                    <button type="button" onclick="placeOrder()">Bestellen</button>
                 </div>
-            </div>
-
-
-        
+            </div>        
     </div>
 
 
