--- a/products.html
+++ b/products.html
@@ -404,7 +404,9 @@
                 Solenya Sanchez<br>
                 <br>
                 E-Mail: solenya.sanchez@chocolate.hell <br>
-                Tel.: +49 666 00815
+                Tel.: +49 666 00815 <br>
+                <br>
+                <a href="datenschutz.html">Datenschutz</a>
             </p>
         </div>
     </div>
