--- a/products.html
+++ b/products.html
@@ -406,7 +406,7 @@
                 E-Mail: solenya.sanchez@chocolate.hell <br>
                 Tel.: +49 666 00815 <br>
                 <br>
-                <a href="datenschutz.html">Datenschutz</a>
+                <a class="daten" href="datenschutz.html">Datenschutz</a>
             </p>
         </div>
     </div>
