--- a/order.html
+++ b/order.html
@@ -41,16 +41,16 @@
                                 <span id="streetError" style="color:red; display: none;">Pflichtfeld</span>
                             </div>
                             <div class="grid-item">
-                                <input type="number" id="number" placeholder="Hausnummer"> 
-                                <span id="numberError" style="color:red; display: none;">Pflichtfeld</span>
+                                <input type="text" id="houseNumber" placeholder="Hausnummer"> 
+                                <span id="houseNumberError" style="color:red; display: none;">Pflichtfeld</span>
                             </div>
                             <div class="grid-item">
                                 <input type="text" id="plz" placeholder="PLZ">
                                 <span id="plzError" style="color:red; display: none;">Pflichtfeld. Darf nur Zahlen enthalten und muss genau 5 Zeichen lang sein.</span>
                             </div>
                             <div class="grid-item">
-                                <input type="text" id="city" placeholder="Stadt">  
-                                <span id="cityError" style="color:red; display: none;">Pflichtfeld</span>
+                                <input type="text" id="cityName" placeholder="Stadt">  
+                                <span id="cityNameError" style="color:red; display: none;">Pflichtfeld</span>
                             </div>
                             <div class="grid-item">
                                 <input type="mail" id="email" placeholder="E-Mail"> 
@@ -65,11 +65,11 @@
                         <select name="Skulptur" id="select">
                             <option value="cat-elegant">cat-elegant</option>
                             <option value="cat-detailed">cat-detailed</option>
-                             <option value="cat-cute">cat-cute</option>
+                            <option value="cat-cute">cat-cute</option>
                             <option value="cross">cross</option>
                             <option value="gravestone">gravestone</option>
                             <option value="coffin-normal">coffin-normal</option>
-                            <option value="gravestone-gold">gravestone-gold</option>
+                            <option value="coffin-gold">gravestone-gold</option>
                             <option value="gravestone-white">gravestone-white</option>
                             <option value="raven">raven</option>
                             <option value="blackwhite-dragon">blackwhite-dragon</option>
@@ -114,7 +114,7 @@
                 Hell's Chocolate <br>
                 <br>
                 Am Seidenen Faden 1-7<br>
-                00666 ############<br>
+                00666 C-137<br>
                 <br>
                 <br>
                 Kontakt: <br>
