--- a/products.html
+++ b/products.html
@@ -155,7 +155,7 @@
 
         <div class="box_right">
             <div class="text">
-                <p class="alone">Bei einem Sarg ist die Sache nicht anders. Ihre Geschichte beginnt hier bereits im damaligen Ägypten und haben somit viele Epochen der Menschheit überdauert. 
+                <p class="alone">Bei einem Sarg ist die Sache nicht anders. Ihre Geschichte beginnt hier bereits im damaligen Ägypten und hat somit viele Epochen der Menschheit überdauert. 
                     Der Zweck war jedoch immer gleich: die angemessene Bestattung der Verstorbenen. Um ihnen die letzte Ruhe so angenehm wie möglich zu gestalten, werden die Särge auf die jeweilige Person angepasst. <br>
                     <br>
                     Skulptur: coffin-normal<br>
@@ -174,7 +174,7 @@
             <div class="text">
                 <p class="alone">Auch wir legen großen Wert darauf unsere Schokoladensärge zur äußersten Zufriedenheit unserer Kunden herzustellen. Mit Liebe zum Detail wird jedes Teil einzeln und händisch verziert. <br>
                     <br>
-                    Skulptur: gravestone-gold<br>
+                    Skulptur: coffin-gold<br>
                     Preis: 50€
                 </p>
             </div>
@@ -346,7 +346,7 @@
             <h2>Gargoyles</h2>
         </div>
         <div class="text">
-            <p>Gargoyles, auch Wasserspeier genannt, hatten in der gotischen Architektur die Aufgabe des Schutzes der Gebäude. So haben sie Wasser von den Dächern durch ihren Mund abgeleitet. 
+            <p>Gargoyles, auch Wasserspeier genannt, hatten in der gotischen Architektur die Aufgabe des Schutzes von Gebäuden. So haben sie Wasser von den Dächern durch ihren Mund abgeleitet. 
                 Ebenso gelten sie auch in der Mythologie als Schutzsymbole. Es wird ihnen nachgesagt, durch ihr Erscheinungsbild, böse Geister und Dämonen fernzuhalten. <br>
                 <br>
                 Skulptur: gargoyle-head<br>
@@ -388,6 +388,26 @@
     </div>
 </div>
 
+<div class="blackbg2 pics_left">
+    <div class="box_left">
+        <img src="fragezeichen.png" class="pics">
+    </div>
+
+    <div class="box_right">
+        <div class="header">
+            <h2>Spezialanfertigungen</h2>
+        </div>
+        <div class="text">
+            <p> Unsere CUSTOM Skulpturen werden speziell auf deine Vorstellungen angefertigt. <br>
+                Die 250€ sind die Pauschale, je nach Größe und Aufwand variiert der Preis.<br>
+                Den genauen Preis werden wir dir in deinem Termin mitteilen und mit dir besprechen. <br>
+                <br>
+                <br>
+                Skulptur: CUSTOM<br>
+                Pauschal-Preis: 250€ </p>
+        </div>
+    </div>
+</div>
 
     <!--Impressum ab hier-->
     <div class="impressum pics_right">
@@ -397,7 +417,7 @@
                 Hell's Chocolate <br>
                 <br>
                 Am Seidenen Faden 1-7<br>
-                00666 ############<br>
+                00666 C-137<br>
                 <br>
                 <br>
                 Kontakt: <br>
