small changes again

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -130,7 +130,7 @@
         </p>
         <h3 class="smallheadline center">Zwecke der Verarbeitung</h3>
         <p class="text center">
-            Wir erhebend deine Daten zu folgendem Zweck: <br>
+            Wir erheben deine Daten zu folgendem Zweck: <br>
             -	Zur Kontaktaufnahme (Bestellung, Support, Informationen zu Bestellungen)<br>
             -	Zur Analyse der Nutzung unserer Webseite, für die Verbesserung der Benutzererfahrung <br>
             -	Zur Einhaltung rechtlicher Pflichten            
