--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                     Noch unentschlossen? <br>
                     Oder sprechen dich unsere Shop Skulpturen nicht an? <br>
                     <br>
-                    Keine Sorge, gemeinsam mit dir fertigen wir eine Skulptur nach deinen Vorstellungen an. <br>
-                    Einfach einen Termin vereinbaren und wir setzen uns mit dir hin und planen dein Kunstwerk.
+                    Keine Sorge, vereinbare einfach einen Termin mit uns und wir planen gemeinsam mit dir deine individuelle Skulptur. <br>
+                    Schreibe uns dazu eine E-Mail an: custom@chocolate.hell
                 </p>
         </div>
         </div>
