--- a/order.html
+++ b/order.html
@@ -30,19 +30,19 @@
                         <div class="grid">
                             <div class="grid-item">
                                 <input type="text" id="firstname" placeholder="Vorname">
-                                <span id="firstnameError" style="color:red; display: none;">Pflichtfeld</span>
+                                <span id="firstnameError" style="color:red; display: none;">Pflichtfeld. Darf nicht leer sein</span>
                             </div>
                             <div class="grid-item">
                                 <input type="text" id="lastname" placeholder="Nachname"> 
-                                <span id="lastnameError" style="color:red; display: none;">Pflichtfeld</span>
+                                <span id="lastnameError" style="color:red; display: none;">Pflichtfeld. Darf nicht leer sein</span>
                             </div>
                             <div class="grid-item">
                                 <input type="text" id="street" placeholder="Straße"> 
-                                <span id="streetError" style="color:red; display: none;">Pflichtfeld</span>
+                                <span id="streetError" style="color:red; display: none;">Pflichtfeld. Darf nicht leer sein</span>
                             </div>
                             <div class="grid-item">
                                 <input type="text" id="houseNumber" placeholder="Hausnummer"> 
-                                <span id="houseNumberError" style="color:red; display: none;">Pflichtfeld</span>
+                                <span id="houseNumberError" style="color:red; display: none;">Pflichtfeld. Darf nicht leer sein</span>
                             </div>
                             <div class="grid-item">
                                 <input type="text" id="plz" placeholder="PLZ">
@@ -54,7 +54,7 @@
                             </div>
                             <div class="grid-item">
                                 <input type="mail" id="email" placeholder="E-Mail"> 
-                                <span id="emailError" style="color:red; display: none;">Pflichtfeld</span>
+                                <span id="emailError" style="color:red; display: none;">Pflichtfeld. Gib eine korrekte E-Mail ein</span>
                             </div>
                          </div>
                        </form>
