--- a/products.html
+++ b/products.html
@@ -400,7 +400,7 @@
         <div class="text">
             <p> Unsere CUSTOM Skulpturen werden speziell auf deine Vorstellungen angefertigt. <br>
                 Die 250€ sind die Pauschale, je nach Größe und Aufwand variiert der Preis.<br>
-                Den genauen Preis werden wir dir in deinem Termin mitteilen und mit dir besprechen. <br>
+                Den genauen Preis werden wir mit dir persönlich besprechen. <br>
                 <br>
                 <br>
                 Skulptur: CUSTOM<br>
