--- a/order.html
+++ b/order.html
@@ -30,11 +30,11 @@
                         <div class="grid">
                             <div class="grid-item">
                                 <input type="text" id="firstname" placeholder="Vorname">
-                                <span id="firstnameError" style="color:red; display: none;">Pflichtfeld. Darf nicht leer sein</span>
+                                <span id="firstnameError" style="color:red; display: none;">Pflichtfeld. Darf nicht leer sein. Nur Buchstaben</span>
                             </div>
                             <div class="grid-item">
                                 <input type="text" id="lastname" placeholder="Nachname"> 
-                                <span id="lastnameError" style="color:red; display: none;">Pflichtfeld. Darf nicht leer sein</span>
+                                <span id="lastnameError" style="color:red; display: none;">Pflichtfeld. Darf nicht leer sein. Nur Buchstaben</span>
                             </div>
                             <div class="grid-item">
                                 <input type="text" id="street" placeholder="Straße"> 
