changed path of pictures to relative path

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                 Natürlich legen wir auch Wert auf unseren Firmensitz. Niedergelassen in einem alten, gotischen Gebäude arbeiten wir
                 seit 2024 stolz an unseren einzigartigen Kreationen. 
             </p>
-            <img src="../Berufsschule/pics/house.webp" alt="house" class="pics ">
+            <img src="./pics/house.webp" alt="house" class="pics ">
         </div>
         <div class="box_right">
-            <img src="../Berufsschule/pics/kitchen.webp" alt="kitchen" class="pics">
+            <img src="./pics/kitchen.webp" alt="kitchen" class="pics">
             <p class="bottom text blackt"> Hier, wo sich Kerzenlicht und Schokolade vereinen, entstehen unsere einzigartigen Skulpturen. In dieser dunklen Halle treffen Tradition
                 und Mystik aufeinander und kreieren so die dunkelste Verführung.               
             </p>
