--- a/products.html
+++ b/products.html
@@ -24,7 +24,7 @@
 
     <div class="blackbg pics_left">
         <div class="box_left">
-            <img src="../Berufsschule/pics/cross.jpg" alt="coffin" class="pics">
+            <img src="./pics/cross.jpg" alt="coffin" class="pics">
         </div>
 
         <div class="box_right">
@@ -49,13 +49,13 @@
 
     <div class="blackbg pics_allover">
         <div class="box_left">
-            <img src="../Berufsschule/pics/coffin.jpg" class="pics">
+            <img src="./pics/coffin.jpg" class="pics">
         </div>
         <div class="box_middle">
-            <img src="../Berufsschule/pics/raven.jpg" class="pics">
+            <img src="./pics/raven.jpg" class="pics">
         </div>
         <div class="box_right">
-            <img src="../Berufsschule/pics/coffingold.jpg" class="pics">
+            <img src="./pics/coffingold.jpg" class="pics">
         </div>
     </div>
 
@@ -63,7 +63,7 @@
     <!--Katzen-->
     <div class="blackbg2 pics_left">
         <div class="box_left">
-            <img src="../Berufsschule/pics/blackcat.jpg" class="pics">
+            <img src="./pics/blackcat.jpg" class="pics">
         </div>
 
         <div class="box_right">
@@ -84,7 +84,7 @@
 
     <div class="blackbg pics_left">
         <div class="box_left">
-            <img src="../Berufsschule/pics/cat.jpg" class="pics">
+            <img src="./pics/cat.jpg" class="pics">
         </div>
 
         <div class="box_right">
@@ -101,7 +101,7 @@
 
     <div class="blackbg pics_left">
         <div class="box_left">
-            <img src="../Berufsschule/pics/cats.jpg" class="pics">
+            <img src="./pics/cats.jpg" class="pics">
         </div>
 
         <div class="box_right">
@@ -116,7 +116,7 @@
     <!--Friedhof-->
     <div class="blackbg2 pics_left">
         <div class="box_left">
-            <img src="../Berufsschule/pics/cross.jpg" class="pics">
+            <img src="./pics/cross.jpg" class="pics">
         </div>
 
         <div class="box_right">
@@ -135,7 +135,7 @@
 
     <div class="blackbg pics_left">
         <div class="box_left">
-            <img src="../Berufsschule/pics/gravestone.jpg" class="pics">
+            <img src="./pics/gravestone.jpg" class="pics">
         </div>
 
         <div class="box_right">
@@ -150,7 +150,7 @@
 
     <div class="blackbg pics_left">
         <div class="box_left">
-            <img src="../Berufsschule/pics/coffin.jpg" class="pics">
+            <img src="./pics/coffin.jpg" class="pics">
         </div>
 
         <div class="box_right">
@@ -167,7 +167,7 @@
 
     <div class="blackbg pics_left">
         <div class="box_left">
-            <img src="../Berufsschule/pics/coffingold.jpg" class="pics">
+            <img src="./pics/coffingold.jpg" class="pics">
         </div>
 
         <div class="box_right">
@@ -183,7 +183,7 @@
 
     <div class="blackbg pics_left">
         <div class="box_left">
-            <img src="../Berufsschule/pics/gravestonebw.jpg" class="pics">
+            <img src="./pics/gravestonebw.jpg" class="pics">
         </div>
 
         <div class="box_right">
@@ -199,7 +199,7 @@
 
     <div class="blackbg pics_left">
         <div class="box_left">
-            <img src="../Berufsschule/pics/raven.jpg" class="pics">
+            <img src="./pics/raven.jpg" class="pics">
         </div>
 
         <div class="box_right">
@@ -218,7 +218,7 @@
     <!--Drachen-->
     <div class="blackbg2 pics_left">
         <div class="box_left">
-            <img src="../Berufsschule/pics/bwdragon.jpg" class="pics">
+            <img src="./pics/bwdragon.jpg" class="pics">
         </div>
 
         <div class="box_right">
@@ -239,7 +239,7 @@
 
     <div class="blackbg pics_left">
         <div class="box_left">
-            <img src="../Berufsschule/pics/dragon.webp" class="pics">
+            <img src="./pics/dragon.webp" class="pics">
         </div>
 
         <div class="box_right">
@@ -255,7 +255,7 @@
 
     <div class="blackbg pics_left">
         <div class="box_left">
-            <img src="../Berufsschule/pics/blackdragon.jpg" class="pics">
+            <img src="./pics/blackdragon.jpg" class="pics">
         </div>
 
         <div class="box_right">
@@ -271,7 +271,7 @@
 
     <div class="blackbg pics_left">
         <div class="box_left">
-            <img src="../Berufsschule/pics/dragonfancy.jpg" class="pics">
+            <img src="./pics/dragonfancy.jpg" class="pics">
         </div>
 
         <div class="box_right">
@@ -287,7 +287,7 @@
  <!--Rosen-->
  <div class="blackbg2 pics_left">
     <div class="box_left">
-        <img src="../Berufsschule/pics/blackrose.jpg" class="pics">
+        <img src="./pics/blackrose.jpg" class="pics">
     </div>
 
     <div class="box_right">
@@ -306,7 +306,7 @@
 
 <div class="blackbg pics_left">
     <div class="box_left">
-        <img src="../Berufsschule/pics/brownrose.jpg" class="pics">
+        <img src="./pics/brownrose.jpg" class="pics">
     </div>
 
     <div class="box_right">
@@ -322,7 +322,7 @@
 
 <div class="blackbg pics_left">
     <div class="box_left">
-        <img src="../Berufsschule/pics/bwrose.jpg" class="pics">
+        <img src="./pics/bwrose.jpg" class="pics">
     </div>
 
     <div class="box_right">
@@ -338,7 +338,7 @@
 <!--Gargoyles hier-->
 <div class="blackbg2 pics_left">
     <div class="box_left">
-        <img src="../Berufsschule/pics/ghead.jpg" class="pics">
+        <img src="./pics/ghead.jpg" class="pics">
     </div>
 
     <div class="box_right">
@@ -358,7 +358,7 @@
 
 <div class="blackbg pics_left">
     <div class="box_left">
-        <img src="../Berufsschule/pics/gargoyleblack.jpg" class="pics">
+        <img src="./pics/gargoyleblack.jpg" class="pics">
     </div>
 
     <div class="box_right">
@@ -374,7 +374,7 @@
 
 <div class="blackbg pics_left">
     <div class="box_left">
-        <img src="../Berufsschule/pics/gbrown.jpg" class="pics">
+        <img src="./pics/gbrown.jpg" class="pics">
     </div>
 
     <div class="box_right">
